fixed glitch on activities page involving pop up showing up behind list. tried to fix clear all button

--- a/client/src/Activities.css
+++ b/client/src/Activities.css
@@ -346,7 +346,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 3000;
     backdrop-filter: blur(5px);
 }
 
@@ -360,6 +360,7 @@
     position: relative;
     box-shadow: var(--shadow);
     border: 1px solid var(--color-border);
+    z-index: 3100;
 }
 
 .event-modal-content {
